assets/scss/local.scss
.govuk-main-wrapper {
  min-height: 600px;
}

.block-background {
  background-color: govuk-colour("light-grey");
  padding: 30px 15px;
}

div.contact-list {
  .govuk-tabs__panel {
    border: 0;
    padding: 20px 0;
    border: 0 !important;
    padding: 30px 0 !important;
  }
  p.govuk-body {
    padding: 0;
  }
  .govuk-summary-list {
    width: auto;
    .govuk-summary-list__value {
      padding-top: 0;
      padding-bottom: 0;
    }
    .govuk-summary-list__key {
      width: 0;
      padding: 0;
      margin: 0;
    }
  }
}

.float-right {
  float: right;
}

.email-addresses-card {
  .govuk-summary-list__row { border-bottom: 0 }
}

.unsupported-identity-hint {
  margin-bottom: 0;
  color: $govuk-secondary-text-colour;
}

// DPS standard styling on top of GDS summary cards.
.govuk-summary-card {
  border: 1px solid govuk-colour("dark-grey");
  box-shadow: 0 5px #D9D9D9;
}

.govuk-summary-card__title-wrapper {
  background-color: govuk-colour("light-grey");
  padding: 0 15px 0 15px;
}

.govuk-summary-card__title-wrapper h2 {
  line-height: 50px;
  font-size: 24px;
  margin: 0;
}

.govuk-summary-card__actions {
  margin: 10px 0;
}

.contact-record-banner-bottom{
  border-bottom: 1px solid govuk-colour("mid-grey");
  padding: 10px 0 10px 0;
}

.emergency-contact-tag {
  background: url('/assets/images/emergencycontact.svg') 8px 8px no-repeat;
  width: 170px;
  padding: 3px 3px 3px 33px;
  border: 2px solid govuk-colour("mid-grey");
  border-radius: 100px;
  margin-bottom: 5px;
}

.next-of-kin-tag {
  background: url('/assets/images/nextofkin.svg') 8px 8px no-repeat;
  width: 100px;
  padding: 3px 3px 3px 33px;
  border: 2px solid govuk-colour("mid-grey");
  border-radius: 100px;
  margin-bottom: 5px;
}

.light-grey {
  background-color: govuk-colour("light-grey");
}

.prisoner-contact-filter {
  background-color: govuk-colour("light-grey");
  h2 {
    margin: 0;
    @include govuk-responsive-padding(6, "top");
    @include govuk-responsive-padding(6, "bottom");
  }
}

.wide-tag {
  max-width: none;
}

.contact-search {
  gap: 15px;
}

div.moj-action-bar__filter::after { content: none !important; }
.moj-filter-layout__content { overflow: hidden; overflow-x: auto; -ms-overflow-style: none; scrollbar-width: none; }
.moj-filter-layout__content::-webkit-scrollbar { display: none; }

.contacts-\!-width-one-fifth {
  width: 20% !important;
}

.remove-width-limit {
  width: unset;
}

.summary-card-wider-key-column {
  .govuk-summary-card__content {
    .govuk-summary-list__row {
      .govuk-summary-list__key {
        width: 40%;
      }
    }
  }
}

